# myitti2

./: ITTI.docx  Makefile
AWS/: .gitignore
AWS/00_INPUT/: 20190312+UPT+Dev+EC2.docx  20190312UPT20dev.pem  Readme.txt  云平台v.2.0开发测试用_AWS 账号.xlsx  云普乐斯教学实验云平台-二期(含一期追加）20190224.xlsx
AWS/01_RM/: Readme.txt  云普乐斯教学实验云平台2.0-需求规格说明书.docx
AWS/02_DESIGN/: 基于AWS教学实验服务平台-API.docx  基于AWS的教学服务平台概要设计v1.1.docx  基于AWS的教学服务平台概要设计v1.2-讨论-0228.docx  基于AWS的教学服务平台概要设计v1.2.docx  概要设计任务安排.xlsx
AWS/03_MK/awslabplatform/: .project  pom.xml
AWS/03_MK/awslabplatform-admin/: .project  pom.xml
AWS/03_MK/awslabplatform-admin/src/main/resources/: applicationContext.xml  druid.properties  fdfs_server_name.properties  logback.xml  mailSenderInfo.properties  redis.xml
AWS/03_MK/awslabplatform-admin/src/main/resources/mybatis/: mybatis-config.xml
AWS/03_MK/awslabplatform-admin/src/main/resources/shiro/: shiro.xml
AWS/03_MK/awslabplatform-admin/src/main/resources/spring/: spring-mvc.xml  spring-mybatis.xml
AWS/03_MK/awslabplatform-admin/src/main/webapp/WEB-INF/: web.xml
AWS/03_MK/awslabplatform/src/main/resources/: applicationContext.xml  druid.properties  fdfs_client.conf  fdfs_server_name.properties  logback.xml  mailSender.xml  mailSenderInfo.properties  redis.properties  redis.xml
AWS/03_MK/awslabplatform/src/main/resources/freemarker/: login.ftl
AWS/03_MK/awslabplatform/src/main/resources/mybatis/: mybatis-config.xml
AWS/03_MK/awslabplatform/src/main/resources/spring/: spring-mvc.xml  spring-mybatis.xml
AWS/03_MK/awslabplatform/src/main/webapp/: index.jsp  unauthorized.jsp
AWS/04_IT/学生端/: AWS教学实验平台-学生端_IT_TestList_V1.0 .xlsm
AWS/04_IT/管理端/: AWS教学实验平台-管理端_IT_TestList_V1.0.xlsm
AWS/06_PM/项目加班情况统计/: 项目加班情况统计表.xlsx
AWS/06_PM/项目干系人管理/: 项目组通讯录.xlsx
AWS/06_PM/项目范围管理/: Readme.txt  项目需求范围.xlsx
AWS/06_PM/项目资源管理/: AWS2.0测试环境申请.xlsx  AWS提供测试服务器.docx  Readme.txt  测试服务器.docx
AWS/06_PM/项目进度管理/: readme.txt  基于AWS教学实验服务平台-里程碑计划.xlsx  基于AWS教学实验服务平台_schedule.xlsx
AWS/06_PM/项目风险管理/: 云普乐斯教学实验云平台QA管理.xlsx  云普乐斯教学实验云平台课题管理.xlsx
AWS/09_KNOWHOW/: Readme.txt
AWS/10_RELEASE/: Readme.txt  云平台v.2.0+问题清单.docx  云平台v.2.0_AWS实验及测试账号.xlsx  测试服务器访问路径.txt  测试版上线修改.xlsx  邮箱.txt
AWS/10_RELEASE/Release环境/: Eazylab.pem  云普乐斯新平台eazylab.cn部署环境.xlsx
COMMON/: common.h  l1_messages_def.h  l1_messages_types.h
UTIL/assert/: assertions.h
UTIL/config/: config_paramdesc.h
UTIL/itti/: all_msg.h  intertask_interface.cpp  intertask_interface.h
UTIL/log/: log.c  log.h
UTIL/telnet/: telnetsrv.c  telnetsrv.h
cmake_targets/: CMakeLists.txt  build
cmake_targets/tools/: make_asn1c_includes.sh
openair1/L1/: l1_task.c  l1_task.h
openair2/L2/: l2_task.c  l2_task.h
openair3/COMMON/: sctp_messages_def.h  sctp_messages_types.h
openair3/L3/: l3_task.c  l3_task.h
openair3/NGAP/: ngap_common.c  ngap_common.h  ngap_decoder.c  ngap_decoder.h  ngap_encoder.c  ngap_encoder.h  ngap_generate_message.c  ngap_generate_message.h  ngap_task.c  ngap_task.h
openair3/NGAP/MESSAGES/ASN1/R16/: ngap-16.2.0.asn1
openair3/NGAP/MESSAGES/ASN1/R16/h/: Makefile.am.libasncodec  NGAP_AMF-TNLAssociationSetupItem.c  NGAP_AMF-TNLAssociationSetupItem.h  NGAP_AMF-TNLAssociationSetupList.c  NGAP_AMF-TNLAssociationSetupList.h  NGAP_AMF-TNLAssociationToAddItem.c  NGAP_AMF-TNLAssociationToAddItem.h  NGAP_AMF-TNLAssociationToAddList.c  NGAP_AMF-TNLAssociationToAddList.h  NGAP_AMF-TNLAssociationToRemoveItem.c  NGAP_AMF-TNLAssociationToRemoveItem.h  NGAP_AMF-TNLAssociationToRemoveList.c  NGAP_AMF-TNLAssociationToRemoveList.h  NGAP_AMF-TNLAssociationToUpdateItem.c  NGAP_AMF-TNLAssociationToUpdateItem.h  NGAP_AMF-TNLAssociationToUpdateList.c  NGAP_AMF-TNLAssociationToUpdateList.h  NGAP_AMF-UE-NGAP-ID.c  NGAP_AMF-UE-NGAP-ID.h  NGAP_AMFCPRelocationIndication.c  NGAP_AMFCPRelocationIndication.h  NGAP_AMFConfigurationUpdate.c  NGAP_AMFConfigurationUpdate.h  NGAP_AMFConfigurationUpdateAcknowledge.c  NGAP_AMFConfigurationUpdateAcknowledge.h  NGAP_AMFConfigurationUpdateFailure.c  NGAP_AMFConfigurationUpdateFailure.h  NGAP_AMFName.c  NGAP_AMFName.h  NGAP_AMFPagingTarget.c  NGAP_AMFPagingTarget.h  NGAP_AMFPointer.c  NGAP_AMFPointer.h  NGAP_AMFRegionID.c  NGAP_AMFRegionID.h  NGAP_AMFSetID.c  NGAP_AMFSetID.h  NGAP_AMFStatusIndication.c  NGAP_AMFStatusIndication.h  NGAP_AdditionalDLUPTNLInformationForHOItem.c  (+1640 more)
openair3/S1AP/: s1ap_common.c  s1ap_common.h  s1ap_decoder.c  s1ap_decoder.h  s1ap_encoder.c  s1ap_encoder.h  s1ap_generate_message.c  s1ap_generate_message.h  s1ap_itti_message.c  s1ap_itti_message.h  s1ap_task.c  s1ap_task.h
openair3/S1AP/MESSAGES/ASN1/R15/S1AP_R15/: Makefile.am.libasncodec  S1AP_ActivatedCellsList-Item.c  S1AP_ActivatedCellsList-Item.h  S1AP_ActivatedCellsList.c  S1AP_ActivatedCellsList.h  S1AP_Additional-GUTI.c  S1AP_Additional-GUTI.h  S1AP_AdditionalCSFallbackIndicator.c  S1AP_AdditionalCSFallbackIndicator.h  S1AP_AerialUEsubscriptionInformation.c  S1AP_AerialUEsubscriptionInformation.h  S1AP_AllocationAndRetentionPriority.c  S1AP_AllocationAndRetentionPriority.h  S1AP_AreaScopeOfMDT.c  S1AP_AreaScopeOfMDT.h  S1AP_AreaScopeOfQMC.c  S1AP_AreaScopeOfQMC.h  S1AP_AssistanceDataForCECapableUEs.c  S1AP_AssistanceDataForCECapableUEs.h  S1AP_AssistanceDataForPaging.c  S1AP_AssistanceDataForPaging.h  S1AP_AssistanceDataForRecommendedCells.c  S1AP_AssistanceDataForRecommendedCells.h  S1AP_BPLMNs.c  S1AP_BPLMNs.h  S1AP_BearerType.c  S1AP_BearerType.h  S1AP_Bearers-SubjectToStatusTransfer-Item.c  S1AP_Bearers-SubjectToStatusTransfer-Item.h  S1AP_Bearers-SubjectToStatusTransferList.c  S1AP_Bearers-SubjectToStatusTransferList.h  S1AP_BitRate.c  S1AP_BitRate.h  S1AP_BluetoothMeasConfig.c  S1AP_BluetoothMeasConfig.h  S1AP_BluetoothMeasConfigNameList.c  S1AP_BluetoothMeasConfigNameList.h  S1AP_BluetoothMeasurementConfiguration.c  S1AP_BluetoothMeasurementConfiguration.h  S1AP_BluetoothName.c  (+1242 more)
openair3/S1AP/MESSAGES/tools/: make_asn1c_includes.sh
openair3/SCTP/: sctp_common.c  sctp_common.h  sctp_defs.h  sctp_task.c  sctp_task.h
openair3/TCP/: tcp_task.c  tcp_task.h
openair3/UDP/: udp_task.c  udp_task.h
(+420 files in other folders)
